--- a/styles.css
+++ b/styles.css
@@ -134,6 +134,16 @@ button {
     color: white;
     margin-top: 20px;
     padding: 20px 50px;
+    cursor: pointer;
+}
+
+button:hover {
+    background-color: white;
+    border: 2px solid black;
+    color: black;
+    margin-top: 20px;
+    padding: 20px 50px;
+    cursor: pointer;
 }
 
 .background2 {
